<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:gravity="center|top"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="90dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:foreground="@drawable/backimage"
                app:srcCompat="@drawable/backimage" />

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:onClick="goMain"
                app:srcCompat="@drawable/iconschevronleft"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/alata"
                android:gravity="center"
                android:text="@string/btn_register"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="34sp"
                android:textStyle="bold" />

        </RelativeLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:fontFamily="@font/alata"
            android:text="@string/txtview_name"
            android:textColor="#000000"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/text_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:ems="10"
            android:hint="Nombre"
            android:inputType="textPersonName"
            android:minHeight="48dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:fontFamily="@font/alata"
            android:text="@string/txtview_lastname"
            android:textColor="#000000"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/text_lastname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:ems="10"
            android:hint="Apellidos"
            android:inputType="textPersonName"
            android:minHeight="48dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:fontFamily="@font/alata"
            android:text="@string/txtview_email"
            android:textColor="#000000"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/text_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:ems="10"
            android:hint="Correo"
            android:inputType="textPersonName"
            android:minHeight="48dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:fontFamily="@font/alata"
            android:text="@string/txtview_phone"
            android:textColor="#000000"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/text_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:ems="10"
            android:hint="Teléfono"
            android:inputType="number|phone"
            android:minHeight="48dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:fontFamily="@font/alata"
            android:text="@string/txtview_pass"
            android:textColor="#000000"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/register_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:ems="10"
            android:hint="Contraseña"
            android:inputType="textPassword"
            android:minHeight="48dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:fontFamily="@font/alata"
            android:text="@string/txtview_passconfirm"
            android:textColor="#000000"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/register_pass_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:ems="10"
            android:hint="Repetir Contraseña"
            android:inputType="textPassword"
            android:minHeight="48dp" />

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:fontFamily="@font/alata"
            android:text="@string/btn_privacy"
            android:textSize="16sp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:backgroundTint="#FFFFFF"
            android:onClick="registrarUsuario"
            android:text="@string/btn_register"
            android:textColor="#F44336"
            android:textSize="16sp"
            app:cornerRadius="0dp"
            app:strokeColor="#F44336"
            app:strokeWidth="1dp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>