<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Space
            android:layout_width="match_parent"
            android:layout_height="77dp"
            android:layout_weight="1" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/panicringlogoapp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:layout_weight="1"
            android:fontFamily="@font/alata"
            android:foregroundGravity="center"
            android:text="@string/Bienvenido"
            android:textAlignment="center"
            android:textColor="#ED4137"
            android:textSize="34sp"
            android:textStyle="bold" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:insetRight="2dp"
            android:onClick="goLogIn"
            android:text="@string/btn_login"
            android:textSize="16sp"
            app:cornerRadius="0dp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:backgroundTint="@color/white"
            android:insetLeft="2dp"
            android:onClick="goRegister"
            android:text="@string/btn_register"
            android:textColor="@color/purple_500"
            android:textSize="16sp"
            app:cornerRadius="0dp"
            app:strokeColor="@color/purple_500"
            app:strokeWidth="1dp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="101dp"
            android:layout_weight="1" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>